--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
@@ -23,8 +24,10 @@
     "react-icons": "^4.8.0",
     "react-image": "^4.1.0",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
+    "redux-persist": "^6.0.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
