add register listing

--- a/ui/package.json
+++ b/ui/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 3001",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,19 +15,25 @@
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
     "infinite-react-carousel": "^1.2.11",
+    "leaflet": "^1.9.3",
     "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "react-image": "^4.1.0",
+    "react-images-upload": "^1.2.8",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-select": "^5.7.2",
     "redux-persist": "^6.0.0",
+    "world-countries": "^4.0.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
