--- a/airbnbApi/src/main/resources/application.yml
+++ b/airbnbApi/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 server:
   port: 8081
 
+
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5332/customer
     username: sun
     password: 1234
+
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
   jpa:
     hibernate:
