--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.7",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
@@ -27,6 +28,7 @@
     "react-icons": "^4.8.0",
     "react-image": "^4.1.0",
     "react-images-upload": "^1.2.8",
+    "react-intersection-observer": "^9.4.3",
     "react-leaflet": "^4.2.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
