--- a/airbnbApi/src/main/resources/application.yml
+++ b/airbnbApi/src/main/resources/application.yml
@@ -2,7 +2,10 @@ server:
   port: 8081
 
 
+
 spring:
+  profiles:
+    include: oauth
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5332/customer
@@ -45,3 +48,5 @@ logging:
   level:
     com.example.airbnbApi: debug
     org.hibernate.sql: debug
+
+
