--- a/airbnbApi/build.gradle
+++ b/airbnbApi/build.gradle
@@ -26,19 +26,24 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
-// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
+	// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
 	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 	//implementation  'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.4'
 
 
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
-// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
-// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+	// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
+	implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.1.1.RELEASE'
+
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
