--- a/airbnbApi/build.gradle
+++ b/airbnbApi/build.gradle
@@ -42,6 +42,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf
 	implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.1.1.RELEASE'
+	// https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
+	implementation group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.1.1.RELEASE'
+
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
